Never use immutable lists for JSF